# intro-ciencia-datos-udm

./: main.py  pyproject.toml
00-Setup/: 01-git-github.md  02-python-envs.md  03-dependency-management.md  04-tooling.md  05-os-notes.md  README.md  Resumen.md
00-Setup/templates/: .gitignore-python  pyproject.poetry.toml  pyproject.uv.toml
notebooks/01-intro/: 01_programacion_con_python.ipynb  02_numpy_vectores_matrices.ipynb  03_pandas.ipynb
notebooks/06-sql/: 01_pandas_sql.ipynb  02_sql.ipynb
notebooks/07 - Feature-Engineer/: 00-tecnicas-preprocesamiento.md  01_imputer_y_missing_indicator.ipynb  02_codificacion_variables_categoricas.ipynb  04_manejo_de_texto_vectorizacion.ipynb
notebooks/08-PCA/: pca_reduccion_dimensionalidad_y_feature_selection.ipynb
notebooks/09 - Regresion/: regresion_lineal_sklearn.ipynb  regresion_logistica_sklearn.ipynb
notebooks/10-modelling/: 1st_model.ipynb  2nd_model.ipynb  3rd_model_extended.ipynb  4th_adult_income_model_extended.ipynb  5th_metricas_clasificacion_auc.ipynb  6th_sklearn_basico_pipeline_columntransformer.ipynb
tareas/05-sql/: tarea_sql_pandas_academia.ipynb
